implementing hook  on search bar component useSearchParams

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-machine-react-rd",
+  "name": "curso-intro-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
